tests/baselines/reference/iteratorSpreadInArray7.errors.txt
tests/cases/conformance/es6/spread/iteratorSpreadInArray7.ts(15,18): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/spread/iteratorSpreadInArray7.ts (1 errors) ====
    class SymbolIterator {
        next() {
            return {
                value: Symbol(),
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    var array: symbol[];
    array.concat([...new SymbolIterator]);
                     ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.